update tenXe in vehicles apis, roles apis for admin
